# todo-cli

./: .gitignore  .travis.yml  LICENSE  README.md  todo-cli.cabal
src/: Lib.hs
src/Data/: NESet.hs
src/Todo/: DB.hs  Model.hs
