name:                   todo-cli
version:                0.1.0.0
description:            Please see the README on Github at <https://github.com/StasyaGera/todo-cli#readme>
homepage:               https://github.com/StasyaGera/todo-cli#readme
bug-reports:            https://github.com/StasyaGera/todo-cli/issues
author:                 Stanislava Gera
maintainer:             stasya.gera@yandex.ru
copyright:              2018 Stanislava Gera
license:                BSD3
license-file:           LICENSE
build-type:             Simple
cabal-version:          >= 1.10
extra-doc-files:        ChangeLog.md
                      , README.md

source-repository head
  type:                 git
  location:             https://github.com/StasyaGera/todo-cli

library
  hs-source-dirs:       src
  build-depends:        base >= 4.9 && < 5
                      , hashable >= 1.0.1.1 && < 1.3
                      , unordered-containers >= 0.2.9.0
  ghc-options:          -Wall
  exposed-modules:      Todo.Model
                        Todo.DB
                        Data.NESet
  other-modules:        Paths_todo_cli
  default-language:     Haskell2010
  default-extensions:   RecordWildCards
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        DeriveGeneric
                        DeriveFoldable

test-suite todo-cli-test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base >= 4.9 && < 5
                      , todo-cli
  other-modules:        Paths_todo_cli
  default-language:     Haskell2010